ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-ingress
  namespace: hotel
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hotel-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: 3.86.69.167.nip.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hotel-backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotel-frontend-service
            port:
              number: 3000
